--- a/ular-last/css/style.css
+++ b/ular-last/css/style.css
@@ -104,6 +104,31 @@ body {
   position: relative;
 }
 
+.slick-arrow {
+  position: absolute;
+  font-size: 0;
+  height: 50px;
+  width: 30px;
+  background-image: url("../img/icons/arrow-slider.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  -webkit-transform-origin: center center;
+      -ms-transform-origin: center center;
+          transform-origin: center center;
+  background-color: transparent;
+}
+
+.slick-arrow:hover {
+  cursor: pointer;
+}
+
+.slick-next {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
 .info-text a,
 .info-text p {
   font-size: 14px;
@@ -235,6 +260,10 @@ body {
 }
 
 .button {
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   padding: 15px 25px;
   color: #fff;
   font-size: 16px;
@@ -504,6 +533,10 @@ body {
   margin: 0 auto;
 }
 
+.section--head {
+  padding-top: 210px;
+}
+
 .header {
   z-index: 100;
   width: 100%;
@@ -749,7 +782,6 @@ body {
 }
 
 .head {
-  padding-top: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1006,26 +1038,8 @@ body {
 }
 
 .photo-slider .slider .slick-arrow {
-  position: absolute;
-  top: 220px;
-  -webkit-transform: translateY(-32%);
-      -ms-transform: translateY(-32%);
-          transform: translateY(-32%);
-  font-size: 0;
-  background-image: url("../img/icons/arrow-slider.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: #fff0;
-  -webkit-transform-origin: center center;
-      -ms-transform-origin: center center;
-          transform-origin: center center;
-  height: 50px;
-  width: 30px;
+  top: 205px;
   opacity: .7;
-}
-
-.photo-slider .slider .slick-arrow:hover {
-  cursor: pointer;
 }
 
 .photo-slider .slider .slick-prev {
@@ -1035,9 +1049,6 @@ body {
 
 .photo-slider .slider .slick-next {
   right: -35%;
-  -webkit-transform: rotate(180deg) translateY(32%);
-      -ms-transform: rotate(180deg) translateY(32%);
-          transform: rotate(180deg) translateY(32%);
 }
 
 .photo-slider .slider .slick-dots {
@@ -1074,6 +1085,7 @@ body {
 }
 
 .photo-slider__button {
+  margin: 0 auto;
   position: relative;
   left: -24px;
 }
@@ -1178,51 +1190,6 @@ body {
   padding: 30px 0;
 }
 
-.our-products .description__paragraph {
-  max-width: 540px;
-  height: 140px;
-  overflow-y: scroll;
-  padding: 5px 27px 5px 0;
-  margin: 34px 0 27px;
-}
-
-.our-products .description__paragraph::-webkit-scrollbar {
-  width: 3px;
-}
-
-.our-products .description__paragraph::-webkit-scrollbar-thumb {
-  background-color: #333;
-}
-
-.our-products .description__paragraph::-webkit-scrollbar-track {
-  background-color: #c4c4c4;
-  border: 1px solid #fff;
-}
-
-.our-products .description .details__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 8px 0;
-}
-
-.our-products .description .details__item p {
-  line-height: 20px;
-  margin-left: 8px;
-}
-
-.our-products .description .details__item p:last-of-type {
-  font-weight: 700;
-}
-
-.our-products .description .details__icon {
-  color: #65951E;
-  font-size: 24px;
-}
-
 .our-products .photos {
   max-width: 450px;
   height: -webkit-fit-content;
@@ -1256,20 +1223,7 @@ body {
 }
 
 .our-products .photos .slick-arrow {
-  z-index: 1;
-  position: absolute;
   bottom: 0;
-  font-size: 0;
-  height: 50px;
-  width: 30px;
-  background-image: url("../img/icons/arrow-slider.svg");
-  background-color: #fff0;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.our-products .photos .slick-arrow:hover {
-  cursor: pointer;
 }
 
 .our-products .photos .slick-next {
@@ -1311,9 +1265,53 @@ body {
   background-color: #333;
 }
 
+.details__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 8px 0;
+}
+
+.details__item p {
+  line-height: 20px;
+  margin-left: 8px;
+}
+
+.details__item p:last-of-type {
+  font-weight: 700;
+}
+
+.details__icon {
+  color: #65951E;
+  font-size: 24px;
+}
+
+.description__paragraph {
+  max-width: 540px;
+  height: 140px;
+  overflow-y: scroll;
+  padding: 5px 27px 5px 0;
+  margin: 34px 0 27px;
+}
+
+.description__paragraph::-webkit-scrollbar {
+  width: 3px;
+}
+
+.description__paragraph::-webkit-scrollbar-thumb {
+  background-color: #333;
+}
+
+.description__paragraph::-webkit-scrollbar-track {
+  background-color: #c4c4c4;
+  border: 1px solid #fff;
+}
+
 .vacancy {
   position: static;
-  padding-top: 210px;
   z-index: 1;
 }
 
@@ -1722,6 +1720,299 @@ body {
   margin-bottom: 0;
 }
 
+.contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contacts__paragraph {
+  margin: 36px 0;
+}
+
+.contacts__paragraph a,
+.contacts__paragraph p {
+  margin: 16px 0 8px;
+}
+
+.contacts__link {
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.contacts__map img {
+  position: absolute;
+  top: 112px;
+  right: 0;
+  height: calc(100% - 112px);
+  width: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.partners {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.partners__info {
+  width: calc(50% - 15px);
+}
+
+.partners__paragraph p {
+  margin: 36px 0;
+}
+
+.partners__slider {
+  max-width: calc(50% - 15px);
+  overflow: hidden;
+  position: relative;
+  height: 380px;
+}
+
+.partners__slider .slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.partners__slider .slick-arrow {
+  bottom: 0;
+}
+
+.partners__slider .slick-next {
+  right: 20%;
+}
+
+.partners__slider .slick-prev {
+  left: 20%;
+}
+
+.partners__slider .slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  bottom: 15px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+
+.partners__slider .slick-dots .slick-active button {
+  height: 13px;
+  width: 13px;
+  background-color: #333;
+  margin: 0 3px;
+}
+
+.partners__slider .slick-dots button {
+  font-size: 0;
+  height: 7px;
+  width: 7px;
+  background-color: #c4c4c4;
+  margin: 0 6px;
+  border-radius: 50%;
+}
+
+.partners__item {
+  width: calc((50% - 60px) / 3);
+  height: 160px;
+  margin: 15px 15px 0;
+  position: relative;
+}
+
+.partners__item img {
+  width: 70%;
+  height: 70%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+}
+
+.product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.product__photo {
+  margin-right: 30px;
+  margin: 0 auto;
+}
+
+.product__photo img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.product__art {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.product__art p {
+  padding-right: 10px;
+}
+
+.product__button {
+  margin-top: 30px;
+}
+
+.similar {
+  text-align: center;
+}
+
+.similar__heading {
+  margin: 0 auto 20px;
+}
+
+.similar__item {
+  margin: 0 15px;
+}
+
+.similar__photo {
+  height: 340px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto 20px;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.similar__photo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.similar__photo:hover {
+  -webkit-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.similar__photo:hover + .similar__title a::before,
+.similar__photo:hover + .similar__title a::after {
+  -webkit-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.similar .hover {
+  -webkit-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.similar__title {
+  text-align: center;
+  max-width: 240px;
+  margin: 0 auto;
+}
+
+.similar__title a {
+  font-size: 24px;
+  line-height: 1.33;
+  display: block;
+  position: relative;
+  padding: 7px 0;
+}
+
+.similar__title a::before,
+.similar__title a::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 50%;
+  background-color: #86C127;
+  -webkit-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left center;
+      -ms-transform-origin: left center;
+          transform-origin: left center;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.similar__title a::after {
+  left: 25%;
+  top: 0;
+  -webkit-transform-origin: center left;
+      -ms-transform-origin: center left;
+          transform-origin: center left;
+}
+
+.similar__title a::before {
+  -webkit-transform-origin: center right;
+      -ms-transform-origin: center right;
+          transform-origin: center right;
+  bottom: 0;
+  right: 25%;
+}
+
+.similar__title a:hover::before,
+.similar__title a:hover::after {
+  -webkit-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.similar__slider {
+  position: relative;
+  overflow: hidden;
+}
+
+.similar__slider .slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.similar__slider .slick-arrow {
+  top: 150px;
+}
+
+.similar__slider .slick-next {
+  right: 0;
+}
+
+.similar__slider .slick-prev {
+  left: 0;
+}
+
 @media (min-width: 767px) {
   .main-heading {
     font-size: calc(40px + 60 * (100vw / 1366));
@@ -1764,6 +2055,24 @@ body {
 
   .head__list {
     margin-left: -30px;
+  }
+}
+
+@media (max-width: 790px) {
+  .partners {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .partners__info {
+    width: 100%;
+  }
+
+  .partners__slider {
+    max-width: 100%;
+    margin: 0 auto;
   }
 }
 
