--- a/ular-last/css/style.css
+++ b/ular-last/css/style.css
@@ -934,6 +934,85 @@ body {
   color: #a9a9a9;
 }
 
+.mobile {
+  display: none;
+  position: fixed;
+  top: 0;
+  padding-top: 70px;
+  z-index: 50;
+  background-color: #fff;
+  width: 100%;
+  height: 100vh;
+  overflow-y: auto;
+}
+
+.mobile__top {
+  padding: 30px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+
+.mobile__top::after {
+  content: "";
+  position: fixed;
+  background-image: url("../img/bg/home_head.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 140px;
+  right: -40%;
+  height: 435px;
+  width: 265px;
+  -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+
+.mobile__lang {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.mobile__lang a {
+  font-size: 24px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.mobile__lang .active {
+  color: #86C127;
+}
+
+.mobile .head__others {
+  margin-top: 10px;
+}
+
+.mobile .head__others .heading {
+  text-align: left;
+  padding-left: 15px;
+}
+
+.mobile .head__list {
+  margin-left: 0;
+}
+
+.mobile .head__item:first-of-type {
+  border-radius: 0;
+}
+
+.mobile__contacts {
+  padding: 20px 60px 20px 15px;
+}
+
 .section {
   position: relative;
   padding: 35px calc((100% - 1306px) / 2) 38px;
@@ -963,6 +1042,57 @@ body {
   transition: all .5s;
 }
 
+.header__mobile {
+  display: none;
+  position: relative;
+}
+
+.header__mobile span {
+  display: block;
+  height: 2px;
+  width: 30px;
+  background-color: #86C127;
+  margin-bottom: 3px;
+  border-radius: 100px;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.header__mobile p {
+  font-size: 10px;
+  text-transform: uppercase;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+  width: 44px;
+  text-align: center;
+}
+
+.header .active span:first-of-type {
+  -webkit-transform: rotate(48.28deg) translateY(3.5px);
+      -ms-transform: rotate(48.28deg) translateY(3.5px);
+          transform: rotate(48.28deg) translateY(3.5px);
+  -webkit-transform-origin: center;
+      -ms-transform-origin: center;
+          transform-origin: center;
+}
+
+.header .active span:last-of-type {
+  -webkit-transform: rotate(-48.28deg) translateY(-3.5px);
+      -ms-transform: rotate(-48.28deg) translateY(-3.5px);
+          transform: rotate(-48.28deg) translateY(-3.5px);
+  -webkit-transform-origin: center;
+      -ms-transform-origin: center;
+          transform-origin: center;
+}
+
+.header .active p {
+  -webkit-transform: translateY(7px);
+      -ms-transform: translateY(7px);
+          transform: translateY(7px);
+}
+
 .header__right {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -973,8 +1103,9 @@ body {
   margin-left: 30px;
 }
 
-.header .lang p {
+.header .lang a {
   font-size: 16px;
+  display: block;
 }
 
 .header--scroll {
@@ -1077,6 +1208,17 @@ body {
 
 .lang__active--none:hover {
   cursor: pointer;
+}
+
+.lang__active--none a {
+  margin-top: 7px;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.lang__active--none a:hover {
+  color: #86C127;
 }
 
 .lang__arrow {
@@ -1227,16 +1369,7 @@ body {
 }
 
 .head {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   position: relative;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
   background-image: url("../img/home/home-bg.png");
   background-position: center bottom;
   background-repeat: no-repeat;
@@ -1246,6 +1379,7 @@ body {
 }
 
 .head::before {
+  z-index: -1;
   position: absolute;
   width: 400px;
   height: 300px;
@@ -1426,6 +1560,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
 }
 
 .advantage__item:hover img {
@@ -2757,7 +2892,7 @@ body {
   }
 
   .heading {
-    font-size: calc(22px + 3.12 * (100vw / 1366));
+    font-size: calc(25px + 0.12 * (100vw / 1366));
   }
 
   .section-heading {
@@ -2804,7 +2939,252 @@ body {
   }
 }
 
+@media (max-width: 1320px) {
+  .photo-slider .slider {
+    max-width: 100%;
+  }
+
+  .photo-slider .slider .slick-next {
+    right: 0;
+  }
+
+  .photo-slider .slider .slick-prev {
+    left: 0;
+  }
+}
+
+@media (max-width: 1020px) {
+  .simple-pagination li:first-of-type {
+    left: 0;
+  }
+
+  .simple-pagination li:last-of-type {
+    right: 0;
+  }
+
+  .path {
+    top: 100px;
+  }
+
+  .section--head {
+    padding-top: 150px;
+  }
+
+  .header {
+    height: 70px;
+    padding: 11px 15px;
+    -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.08);
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.08);
+    background-color: #fff;
+  }
+
+  .header img {
+    height: 48px;
+    width: 79px;
+  }
+
+  .header__right {
+    display: none;
+  }
+
+  .header__mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .header--scroll {
+    background-color: #fff;
+  }
+
+  .header--out {
+    background-color: #fff;
+  }
+
+  .primary-menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .primary-menu a {
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 500;
+  }
+
+  .menu-item {
+    margin-bottom: 15px;
+    margin-right: 0;
+  }
+
+  .menu-item::before {
+    display: none;
+  }
+
+  .menu-item:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .head {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 92px;
+  }
+
+  .head__others {
+    margin-top: 0;
+  }
+
+  .head__others .heading {
+    text-align: center;
+  }
+
+  .head__list {
+    margin-left: 0;
+  }
+
+  .head__item:first-of-type {
+    border-radius: 20px 0 0 20px;
+  }
+
+  .head__info {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .head__button {
+    margin: 0 auto;
+    right: 24px;
+  }
+
+  .head__photo {
+    position: relative;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    max-width: 100%;
+    width: 100%;
+    height: 300px;
+    overflow: visible;
+  }
+
+  .head__photo::before {
+    display: none;
+  }
+
+  .head__photo img {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 440px;
+    -o-object-fit: contain;
+       object-fit: contain;
+    -o-object-position: center center;
+       object-position: center center;
+  }
+
+  .gallery__list {
+    margin-top: 30px;
+  }
+}
+
 @media (max-width: 900px) {
+  .advantage {
+    padding-top: 70px;
+    padding-bottom: 35px;
+  }
+
+  .advantage__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .advantage__list::before {
+    display: none;
+  }
+
+  .advantage__item {
+    width: 40%;
+    margin-bottom: 40px;
+  }
+
+  .advantage__item:last-of-type {
+    margin: 0;
+  }
+
+  .photo-slider {
+    padding-bottom: 35px;
+    background-image: none;
+  }
+
+  .photo-slider .slider__item img {
+    width: 70vw;
+  }
+
+  .photo-slider .slider .slick-slide {
+    -webkit-transform: scale(1);
+        -ms-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+
+  .photo-slider .slider .slick-arrow {
+    height: 40px;
+    top: calc(100% - 26.5px);
+  }
+
+  .photo-slider .slider .slick-next {
+    right: 0;
+  }
+
+  .photo-slider .slider .slick-prev {
+    left: 0;
+  }
+
+  .photo-slider .slider .slick-dots {
+    margin-top: 20px;
+  }
+
+  .gallery__list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px calc(30px + 119 * ((100vw - 700px) / 1366));
+  }
+
   .products__list {
     grid-template-columns: repeat(3, 1fr);
     gap: 30px calc(30px + 119 * ((100vw - 700px) / 1366));
@@ -2839,7 +3219,7 @@ body {
   }
 
   .heading {
-    font-size: calc(22px + 5.304 * ((100vw - 320px) / 1366));
+    font-size: calc(25px + 0.204 * ((100vw - 320px) / 1366));
   }
 
   .section-heading {
@@ -2857,9 +3237,97 @@ body {
     padding-right: 15px;
   }
 
+  .gallery__list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px calc(30px + 119 * ((100vw - 440px) / 1366));
+  }
+
   .products__list {
     grid-template-columns: repeat(2, 1fr);
     gap: 30px calc(30px + 119 * ((100vw - 440px) / 1366));
+  }
+}
+
+@media (max-width: 640px) {
+  .mobile .head__list {
+    position: relative;
+  }
+
+  .head {
+    padding-bottom: 0;
+  }
+
+  .head::before {
+    display: none;
+  }
+
+  .head__text {
+    display: none;
+  }
+
+  .head__others {
+    padding-top: 40px;
+    background-color: #fff;
+  }
+
+  .head__others .heading {
+    text-align: left;
+    padding-left: 15px;
+  }
+
+  .head__list {
+    margin-left: 0;
+    position: relative;
+    left: 0;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .head__item {
+    border-radius: 0;
+    display: block;
+  }
+
+  .head__item:first-of-type,
+  .head__item:last-of-type {
+    border-radius: 0;
+  }
+
+  .head__item img {
+    width: 100%;
+  }
+
+  .head__item-text {
+    padding-bottom: 5px;
+  }
+
+  .photo-slider .slider__item img {
+    width: 90vw;
+  }
+
+  .photo-slider .slider .slick-arrow {
+    height: 26px;
+    top: calc(100% - 19.5px);
+  }
+}
+
+@media (max-width: 640px) and (max-width: 767px) {
+  .head__item-text p {
+    font-size: calc(12px + 39.1 * ((100vw - 320px) / 1366));
+  }
+}
+
+@media (max-width: 600px) {
+  .advantage__item {
+    width: 100%;
+  }
+}
+
+@media (max-width: 640px) and (min-width: 767px) {
+  .head__item-text p {
+    font-size: calc(12px + 23 * (100vw / 1366));
   }
 }
 
@@ -2880,6 +3348,8 @@ body {
 
 @media (min-height: 797px) {
   .head {
-    height: 797px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
   }
 }
